--- a/Resource/css/style.css
+++ b/Resource/css/style.css
@@ -459,3 +459,16 @@ form .user-details .input-box{
     cursor: pointer;
 }
 
+.date{
+    display: inline-block;
+    background: rgba(132, 139, 200, 0.18);
+    border-radius: 0.4rem;
+    margin-bottom: 0.7rem;
+    padding: 0.5rem 1.6rem;
+}
+
+.date input[type='date']{
+    background-color: transparent;
+    color: #363949;
+    border: none;
+}
